[gd_scene load_steps=4 format=3 uid="uid://don1qh1umbtjo"]

[ext_resource type="Script" uid="uid://b4oj52x6ry6xx" path="res://world/player/player.gd" id="1_yynsy"]
[ext_resource type="Texture2D" uid="uid://fcmwxkf730l7" path="res://icon.svg" id="2_bvkkv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvkkv"]
radius = 15.0
height = 50.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_yynsy")

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(1, 1.625)
texture = ExtResource("2_bvkkv")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bvkkv")

[node name="HeldItemSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(22, 0)
scale = Vector2(0.5, 0.5)
